--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-form-input-validation": "^2.0.5",
     "react-google-login": "^5.2.2",
     "react-router-dom": "^5.3.0",
+    "react-router-loading": "^0.3.0",
     "react-scripts": "4.0.3",
     "typescript": "^4.4.3",
     "web-vitals": "^1.0.1"
