--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-router-dom": "^5.3.0",
     "react-router-loading": "^0.3.0",
     "react-scripts": "4.0.3",
+    "reactjs-popup": "^2.0.5",
     "typescript": "^4.4.3",
     "web-vitals": "^1.0.1"
   },
